performance:  seo + first opt.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fake-3d-images-gallery</title>
+    <meta
+      name="description"
+      content="Interactive 3D showcase powered by WebGL and Three.js, featuring depth-based Fake3D effects, custom shaders, and smooth liquid-like transitions. Explore images with dynamic parallax distortion, a responsive gallery panel, and immersive mouse-driven animations."
+    />
+    <meta
+      name="keywords"
+      content="fake 3D slider, WebGL depth map, Three.js parallax, GLSL shaders, interactive slider, distorted image effect, WebGL 3D illusion, parallax animation, depth shader effect, creative coding WebGL, Three.js gallery, liquid warp effect, cursor reactive animation, immersive UI"
+    />
+
+    <meta name="author" content="delafuentej" />
+    <meta property="og:title" content="Warp Liquid Frames Slider" />
+    <meta
+      property="og:description"
+      content="A visually immersive image slider with warp and liquid effects using WebGL and Three.js."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https:/three-js-shaders-warp-liquid-frames.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Warp Liquid Frames Slider" />
+    <meta
+      name="twitter:description"
+      content="Fluid WebGL slider with dynamic warp transitions and real-time effects."
+    />
+    <meta
+      name="twitter:image"
+      content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Experience a warp liquid frames slider built with WebGL and Three.js. Enjoy smooth, fluid transitions between frames, optimized for performance and visual quality."
+    />
+    <meta
+      name="keywords"
+      content="WebGL slider, Three.js animation, fluid transitions, warp effect, image slider, GLSL shaders, interactive UI, creative coding"
+    />
+    <meta name="author" content="delafuentej" />
+    <meta property="og:title" content="Fake-3D- Images Gallery" />
+    <meta
+      property="og:description"
+      content="Experience a warp liquid frames slider built with WebGL and Three.js. Enjoy smooth, fluid transitions between frames, optimized for performance and visual quality."
+    />
+    <meta property="og:type" content="website" />
+    <!-- <meta -->
+    <!-- property="og:url" -->
+    <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/" -->
+    <!-- /> -->
+    <!-- <meta -->
+    <!-- property="og:image" -->
+    <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png" -->
+    <!-- /> -->
+
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <!-- <meta name="twitter:title" content="Fake-3D- Images Gallery" /> -->
+    <!-- <meta -->
+    <!-- name="twitter:description" -->
+    <!-- content="Fluid WebGL slider with dynamic warp transitions and real-time effects." -->
+    <!-- /> -->
+    <!-- <meta -->
+    <!-- name="twitter:image" -->
+    <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png" -->
+    <!-- /> -->
+    <title>Fake-3D- Images Gallery</title>
   </head>
   <body>
     <div id="root"></div>
