--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
     <!-- name="twitter:image" -->
     <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png" -->
     <!-- /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Fake-3D- Images Gallery</title>
   </head>
   <body>
