seo + license + readme file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Interactive 3D showcase powered by WebGL and Three.js, featuring depth-based Fake3D effects, custom shaders, and smooth liquid-like transitions. Explore images with dynamic parallax distortion, a responsive gallery panel, and immersive mouse-driven animations."
+      content="Interactive fake-3D image gallery built with WebGL, React and custom GLSL shaders. Real-time depth-map parallax, smooth mouse-driven displacement, and high-performance texture rendering for immersive visual effects."
     />
     <meta
       name="keywords"
@@ -14,66 +14,67 @@
     />
 
     <meta name="author" content="delafuentej" />
-    <meta property="og:title" content="Warp Liquid Frames Slider" />
+    <meta property="og:title" content="Fake-3D-Images Gallery" />
     <meta
       property="og:description"
-      content="A visually immersive image slider with warp and liquid effects using WebGL and Three.js."
+      content="Explore an interactive fake-3D image slider with WebGL parallax, depth-map distortion and ultra-smooth transitions driven by custom shaders and real-time mouse input."
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https:/three-js-shaders-warp-liquid-frames.vercel.app/"
+      content="https://react-threejs-glsl-fake-3d-images-g.vercel.app/"
     />
     <meta
       property="og:image"
-      content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png"
+      content="https://react-threejs-glsl-fake-3d-images-g.vercel.app/images/app/app2.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Warp Liquid Frames Slider" />
     <meta
       name="twitter:description"
-      content="Fluid WebGL slider with dynamic warp transitions and real-time effects."
+      content="Interactive fake-3D image gallery built with WebGL, React and custom GLSL shaders. Real-time depth-map parallax, smooth mouse-driven displacement, and high-performance texture rendering for immersive visual effects."
     />
     <meta
       name="twitter:image"
-      content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png"
+      content="https://react-threejs-glsl-fake-3d-images-g.vercel.app/images/app/app1.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Experience a warp liquid frames slider built with WebGL and Three.js. Enjoy smooth, fluid transitions between frames, optimized for performance and visual quality."
+      content="Interactive fake-3D image gallery built with WebGL, React and custom GLSL shaders. Real-time depth-map parallax, smooth mouse-driven displacement, and high-performance texture rendering for immersive visual effects."
     />
     <meta
       name="keywords"
-      content="WebGL slider, Three.js animation, fluid transitions, warp effect, image slider, GLSL shaders, interactive UI, creative coding"
+      content="fake 3D gallery, WebGL image gallery, depth map parallax, GLSL shaders, Three.js effects, fake 3D displacement, interactive image slider, WebGL parallax, shader-driven animations, React WebGL, Vite WebGL, Three.js image distortion, mouse parallax effect, depth texture mapping, WebGL transition effects, immersive UI, creative coding, WebGL art, front-end shader effects, shader gallery"
     />
+
     <meta name="author" content="delafuentej" />
     <meta property="og:title" content="Fake-3D- Images Gallery" />
     <meta
       property="og:description"
-      content="Experience a warp liquid frames slider built with WebGL and Three.js. Enjoy smooth, fluid transitions between frames, optimized for performance and visual quality."
+      content="A WebGL gallery built with **React + Vite** that simulates real depth using a combination of: Depth maps, Custom GLSL shaders,  Mouse-driven parallax, Texture displacement, Mirrored UV mapping to avoid texture clipping"
     />
     <meta property="og:type" content="website" />
-    <!-- <meta -->
-    <!-- property="og:url" -->
-    <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/" -->
-    <!-- /> -->
-    <!-- <meta -->
-    <!-- property="og:image" -->
-    <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png" -->
-    <!-- /> -->
+    <meta
+      property="og:url"
+      content="https://react-threejs-glsl-fake-3d-images-g.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://react-threejs-glsl-fake-3d-images-g.vercel.app/images/app/app1.png"
+    />
 
-    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
-    <!-- <meta name="twitter:title" content="Fake-3D- Images Gallery" /> -->
-    <!-- <meta -->
-    <!-- name="twitter:description" -->
-    <!-- content="Fluid WebGL slider with dynamic warp transitions and real-time effects." -->
-    <!-- /> -->
-    <!-- <meta -->
-    <!-- name="twitter:image" -->
-    <!-- content="https:/three-js-shaders-warp-liquid-frames.vercel.app/images/app/app-1.png" -->
-    <!-- /> -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Fake-3D- Images Gallery" />
+    <meta
+      name="twitter:description"
+      content="A WebGL gallery built with **React + Vite** that simulates real depth using a combination of: Depth maps, Custom GLSL shaders,  Mouse-driven parallax, Texture displacement, Mirrored UV mapping to avoid texture clipping"
+    />
+    <meta
+      name="twitter:image"
+      content="https://react-threejs-glsl-fake-3d-images-g.vercel.app/images/app/app1.png"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -81,7 +82,7 @@
       rel="stylesheet"
     />
 
-    <title>Fake-3D- Images Gallery</title>
+    <title>Fake-3D-Images Gallery</title>
   </head>
   <body>
     <div id="root"></div>
