--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
       rel="stylesheet"
     />
 
+    <link rel="preload" as="image" href="/images/fake3d/woman_fake3d.webp" />
+    <link rel="preload" as="image" href="/images/depth/woman_depth.webp" />
+
     <title>Fake-3D-Images Gallery</title>
   </head>
   <body>
