preload images html deleted

--- a/index.html
+++ b/index.html
@@ -82,8 +82,18 @@
       rel="stylesheet"
     />
 
-    <link rel="preload" as="image" href="/images/fake3d/woman_fake3d.webp" />
-    <link rel="preload" as="image" href="/images/depth/woman_depth.webp" />
+    <!-- <link -->
+    <!-- rel="preload" -->
+    <!-- as="image" -->
+    <!-- href="/images/fake3d/woman_fake3d.webp" -->
+    <!-- crossorigin="anonymous" -->
+    <!-- /> -->
+    <!-- <link -->
+    <!-- rel="preload" -->
+    <!-- as="image" -->
+    <!-- href="/images/depth/woman_depth.webp" -->
+    <!-- crossorigin="anonymous" -->
+    <!-- /> -->
 
     <title>Fake-3D-Images Gallery</title>
   </head>
